--- a/uk/browser/chrome/browser/loop/loop.properties
+++ b/uk/browser/chrome/browser/loop/loop.properties
@@ -4,12 +4,12 @@
 
 # Panel Strings
 
-share_link_header_text=Share this link to invite someone to talk:
+share_link_header_text=Поділіться цим посиланням, щоб запросити кого-небудь поговорити:
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
 ## Click the label icon at the end of the url field.
-invitee_name_label=Who are you inviting?
+invitee_name_label=Кого ви запрошуєте?
 ## LOCALIZATION NOTE(invitee_expire_days_label): Allows the user to adjust
 ## the expiry time. Click the label icon at the end of the url field to see where
 ## this is:
@@ -17,7 +17,7 @@ invitee_name_label=Who are you inviting?
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
-invitee_expire_days_label=Invitation will expire in {{expiry_time}} day;Invitation will expire in {{expiry_time}} days
+invitee_expire_days_label=Термін дії запрошення завершиться через {{expiry_time}} день;Термін дії запрошення завершиться через {{expiry_time}} дні;Термін дії запрошення завершиться через {{expiry_time}} днів
 ## LOCALIZATION NOTE(invitee_expire_hours_label): Allows the user to adjust
 ## the expiry time. Click the label icon are the end of the url field to see where
 ## this is:
@@ -25,246 +25,246 @@ invitee_expire_days_label=Invitation will expire in {{expiry_time}} day;Invitati
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
-invitee_expire_hours_label=Invitation will expire in {{expiry_time}} hour;Invitation will expire in {{expiry_time}} hours
+invitee_expire_hours_label=Термін дії запрошення завершиться через {{expiry_time}} годину;Термін дії запрошення завершиться через {{expiry_time}} години;Термін дії запрошення завершиться через {{expiry_time}} годин
 
 # Status text
-display_name_guest=Guest
-display_name_dnd_status=Do Not Disturb
-display_name_available_status=Available
+display_name_guest=Гість
+display_name_dnd_status=Не турбувати
+display_name_available_status=Доступний
 
 # Error bars
 ## LOCALIZATION NOTE(unable_retrieve_url,session_expired_error_description,could_not_authenticate,password_changed_question,try_again_later,could_not_connect,check_internet_connection,login_expired,service_not_available,problem_accessing_account):
 ## These may be displayed at the top of the panel here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
-unable_retrieve_url=Sorry, we were unable to retrieve a call url.
-session_expired_error_description=Session expired. All URLs you have previously created and shared will no longer work.
-could_not_authenticate=Could Not Authenticate
-password_changed_question=Did you change your password?
-try_again_later=Please try again later
-could_not_connect=Could Not Connect To The Server
-check_internet_connection=Please check your internet connection
-login_expired=Your Login Has Expired
-service_not_available=Service Unavailable At This Time
-problem_accessing_account=There Was A Problem Accessing Your Account
+unable_retrieve_url=Нажаль, нам не вдалося отримати url дзвінка.
+session_expired_error_description=Сеанс прострочений. Всі попередньо створені і відправлені URL більше не працюватимуть.
+could_not_authenticate=Не вдалося перевірити
+password_changed_question=Ви змінили свій пароль?
+try_again_later=Спробуйте знову пізніше
+could_not_connect=Не вдалося з'єднатись із сервером
+check_internet_connection=Перевірте своє підключення до інтернету
+login_expired=Термін дії вашого логіна завершився
+service_not_available=Послуга в даний момент недоступна
+problem_accessing_account=Виникла проблема під час доступу до вашого облікового запису
 
 ## LOCALIZATION NOTE(retry_button): Displayed when there is an error to retry
 ## the appropriate action.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
-retry_button=Retry
+retry_button=Повторити
 
-share_email_subject3=You have been invited to a conversation
+share_email_subject3=Вас запросили поговорити
 ## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body3=To accept this invitation, just copy or click this link to start your conversation:\r\n\r\n{{callUrl}}
-share_button=Email
-copy_url_button=Copy
-copied_url_button=Copied!
+share_email_body3=Для підтвердження цього запрошення, просто скопіюйте або клацніть це посилання, щоб почати розмову:\r\n\r\n{{callUrl}}
+share_button=Ел. пошта
+copy_url_button=Копіювати
+copied_url_button=Скопійовано!
 
-panel_footer_signin_or_signup_link=Sign In or Sign Up
+panel_footer_signin_or_signup_link=Вхід або реєстрація
 
-settings_menu_item_account=Account
-settings_menu_item_settings=Settings
-settings_menu_item_signout=Sign Out
-settings_menu_item_signin=Sign In
-settings_menu_button_tooltip=Settings
+settings_menu_item_account=Обліковий запис
+settings_menu_item_settings=Налаштування
+settings_menu_item_signout=Вихід
+settings_menu_item_signin=Вхід
+settings_menu_button_tooltip=Налаштування
 
 # Contact Strings (Panel)
 
 ## LOCALIZATION NOTE(contacts_search_placeholder): This is the placeholder text for
 ## the search field at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-contacts_search_placesholder=Search…
+contacts_search_placesholder=Пошук…
 
 ## LOCALIZATION NOTE (new_contact_button): This is the button to open the
 ## new contact sub-panel.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## for where this appears on the UI
-new_contact_button=New Contact
+new_contact_button=Новий контакт
 ## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
 ## These are the placeholders for the fields for entering a new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## and click the 'New Contact' button to see the fields.
-new_contact_name_placeholder=Name
-new_contact_email_placeholder=Email
+new_contact_name_placeholder=Ім'я
+new_contact_email_placeholder=Ел. пошта
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## and click the 'New Contact' button to see the fields.
-add_contact_button=Add Contact
+add_contact_button=Додати контакт
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
-valid_email_text_description=Please enter a valid email address
+valid_email_text_description=Уведіть дійсну адресу електронної пошти
 
 ## LOCALIZATION NOTE (add_or_import_contact_title): This is the subtitle of the panel
 ## at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-add_or_import_contact_title=Add or Import Contact
+add_or_import_contact_title=Додати чи імпортувати контакт
 ## LOCALIZATION NOTE (import_contacts_button, importing_contacts_progress_button):
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## for where these appear on the UI
-import_contacts_button=Import
-importing_contacts_progress_button=Importing…
+import_contacts_button=Імпортувати
+importing_contacts_progress_button=Імпорт…
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
-sync_contacts_button=Sync Contacts
+sync_contacts_button=Синхронізувати контакти
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
-import_failed_description_simple=Sorry, contact import failed
+import_failed_description_simple=Нажаль, не вдалося імпортувати контакт
 ## LOCALIZATION NOTE(import_failed_description): Displayed when an import of contacts
 ## fails and the user may need more help. In this item, don't translate the part between
 ## {{..}} because this will be replaced by the label from import_failed_support_link_label.
 ## This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
-import_failed_description=Sorry, contact import failed, please see our {{import_failed_support_link_label}} for help
-import_failed_support_link_label=support site
+import_failed_description=Нажаль, не вдалося імпортувати контакт. Для отримання допомоги, перегляньте {{import_failed_support_link_label}}
+import_failed_support_link_label=сайт підтримки
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-remove_contact_menu_button=Remove Contact
+remove_contact_menu_button=Вилучити контакт
 ## LOCALIZATION NOTE(confirm_delete_contact_alert): This is an alert that is displayed
 ## to confirm deletion of a contact.
-confirm_delete_contact_alert=Are you sure you want to delete this contact?
+confirm_delete_contact_alert=Ви впевнені, що хочете вилучити цей контакт?
 ## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
 ## These are displayed on the alert with confirm_delete_contact_alert
-confirm_delete_contact_remove_button=Remove Contact
-confirm_delete_contact_cancel_button=Cancel
+confirm_delete_contact_remove_button=Прибрати контакт
+confirm_delete_contact_cancel_button=Скасувати
 
 ## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name, used to block a contact from calling
 ## the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-block_contact_menu_button=Block Contact
+block_contact_menu_button=Блокувати контакт
 ## LOCALIZATION NOTE(unblock_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name, used to unblock a contact and allow them
 ## to call the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-unblock_contact_menu_button=Unblock Contact
+unblock_contact_menu_button=Розблокувати контакт
 
 ## LOCALIZATION NOTE(edit_contact_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-edit_contact_menu_button=Edit Contact…
+edit_contact_menu_button=Змінити контакт…
 ## LOCALIZATION NOTE(edit_contact_tile): This is the subtitle of the edit contact
 ## panel. It is displayed when Edit Contact is selected.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-edit_contact_title=Edit Contact
+edit_contact_title=Змінити контакт
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These fields are display when the Edit Contact button is selected.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-edit_contact_name_label=Name
-edit_contact_email_label=Email
+edit_contact_name_label=Ім'я
+edit_contact_email_label=Ел. пошта
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These button is displayed when the Edit Contact button is selected and is used
 ## to accept the change.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-edit_contact_done_button=Done
+edit_contact_done_button=Готово
 
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-audio_call_menu_button=Audio Conversation
+audio_call_menu_button=Голосовий дзвінок
 
 ## LOCALIZATION NOTE(video_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-video_call_menu_button=Video Conversation
+video_call_menu_button=Відеодзвінок
 
 # Conversation Window Strings
 
-initiate_call_button_label2=Ready to start your conversation?
-incoming_call_title2=Conversation Request
-incoming_call_accept_button=Accept
-incoming_call_accept_audio_only_tooltip=Accept with voice
-incoming_call_cancel_button=Cancel
-incoming_call_cancel_and_block_button=Cancel and Block
-incoming_call_block_button=Block
-hangup_button_title=Hang up
-hangup_button_caption2=Exit
-mute_local_audio_button_title=Mute your audio
-unmute_local_audio_button_title=Unmute your audio
-mute_local_video_button_title=Mute your video
-unmute_local_video_button_title=Unmute your video
+initiate_call_button_label2=Готові почати свою розмову?
+incoming_call_title2=Запит розмови
+incoming_call_accept_button=Прийняти
+incoming_call_accept_audio_only_tooltip=Прийняти з голосом
+incoming_call_cancel_button=Відхилити
+incoming_call_cancel_and_block_button=Відхилити і блокувати
+incoming_call_block_button=Блокувати
+hangup_button_title=Покласти слухавку
+hangup_button_caption2=Вийти
+mute_local_audio_button_title=Вимкнути звук
+unmute_local_audio_button_title=Відновити звук
+mute_local_video_button_title=Вимкнути відео
+unmute_local_video_button_title=Відновити відео
 
 ## LOCALIZATION NOTE (call_with_contact_title): The title displayed
 ## when calling a contact. Don't translate the part between {{..}} because
 ## this will be replaced by the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
-call_with_contact_title=Conversation with {{contactName}}
+call_with_contact_title=Розмова з {{contactName}}
 
 # Outgoing conversation
 
-outgoing_call_title=Start conversation?
-initiate_audio_video_call_button2=Start
-initiate_audio_video_call_tooltip2=Start a video conversation
-initiate_audio_call_button2=Voice conversation
-initiate_call_cancel_button=Cancel
+outgoing_call_title=Почати розмову?
+initiate_audio_video_call_button2=Почати
+initiate_audio_video_call_tooltip2=Почати відеорозмову
+initiate_audio_call_button2=Голосова розмова
+initiate_call_cancel_button=Скасувати
 
 ## LOCALIZATION NOTE (call_progress_connecting_description): This is displayed
 ## whilst the client is contacting the client at the other end of the connection
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
-call_progress_connecting_description=Connecting…
+call_progress_connecting_description=З'єднання…
 ## LOCALIZATION NOTE (call_progress_ringing_description): This is displayed
 ## when the other client is actually ringing.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
-call_progress_ringing_description=Ringing…
+call_progress_ringing_description=Виклик…
 
-peer_ended_conversation2=The person you were calling has ended the conversation.
-conversation_has_ended=Your conversation has ended.
-restart_call=Rejoin
+peer_ended_conversation2=Ваш співрозмовник завершив розмову.
+conversation_has_ended=Вашу розмову завершено.
+restart_call=Запросити знову
 
-generic_failure_title=Something went wrong.
-generic_failure_with_reason2=You can try again or email a link to be reached at later.
-generic_failure_no_reason2=Would you like to try again?
+generic_failure_title=Щось пішло не так.
+generic_failure_with_reason2=Ви можете спробувати знову або надіслати посилання ел. поштою, щоб вам подзвонили пізніше.
+generic_failure_no_reason2=Чи бажаєте спробувати знову?
 
 ## LOCALIZATION NOTE (contact_offline_title): Title for
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
 ## displayed when the contact is offline.
-contact_offline_title=This person is not online
+contact_offline_title=Ця людина не в мережі
 ## LOCALIZATION NOTE (call_timeout_notification_text): Title for
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
 ## displayed when the call didn't go through.
-call_timeout_notification_text=Your call did not go through.
+call_timeout_notification_text=Ваш виклик не пройшов.
 
 ## LOCALIZATION NOTE (retry_call_button, cancel_button, email_link_button):
 ## These buttons are displayed when a call has failed:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
-retry_call_button=Retry
-email_link_button=Email Link
-cancel_button=Cancel
+retry_call_button=Повторити
+email_link_button=Надіслати посилання ел. поштою
+cancel_button=Скасувати
 
-cannot_start_call_session_not_ready=Can't start call, session is not ready.
-network_disconnected=The network connection terminated abruptly.
-connection_error_see_console_notification=Call failed; see console for details.
+cannot_start_call_session_not_ready=Неможливо почати виклик, сеанс не готовий.
+network_disconnected=Мережеве з'єднання раптово обірвалось.
+connection_error_see_console_notification=Виклик невдалий; подробиці в консолі.
 
 ## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
 ## by the brand name, or fall back to client_shortname_fallback
-legal_text_and_links3=By using {{clientShortname}} you agree to the {{terms_of_use}} \
-  and {{privacy_notice}}.
-legal_text_tos = Terms of Use
-legal_text_privacy = Privacy Notice
-client_shortname_fallback=this product
+legal_text_and_links3=Використовуючи {{clientShortname}}, ви погоджуєтесь із {{terms_of_use}} \
+  та {{privacy_notice}}.
+legal_text_tos = Умови використання
+legal_text_privacy = Повідомлення про приватність
+client_shortname_fallback=цей продукт
 
-feedback_call_experience_heading2=How was your conversation?
-feedback_what_makes_you_sad=What makes you sad?
-feedback_thank_you_heading=Thank you for your feedback!
-feedback_category_audio_quality=Audio quality
-feedback_category_video_quality=Video quality
-feedback_category_was_disconnected=Was disconnected
-feedback_category_confusing=Confusing
-feedback_category_other=Other:
-feedback_custom_category_text_placeholder=What went wrong?
-feedback_submit_button=Submit
-feedback_back_button=Back
+feedback_call_experience_heading2=Як пройшла розмова?
+feedback_what_makes_you_sad=Що вас засмутило?
+feedback_thank_you_heading=Дякуємо за зворотній зв'язок!
+feedback_category_audio_quality=Якість звуку
+feedback_category_video_quality=Якість відео
+feedback_category_was_disconnected=Було роз'єднано
+feedback_category_confusing=Заплутано
+feedback_category_other=Інше:
+feedback_custom_category_text_placeholder=Що пішло не так?
+feedback_submit_button=Відправити
+feedback_back_button=Назад
 ## LOCALIZATION NOTE (feedback_window_will_close_in2):
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
-feedback_window_will_close_in2=This window will close in {{countdown}} second;This window will close in {{countdown}} seconds
+feedback_window_will_close_in2=Це вікно закриється через {{countdown}} секунду;Це вікно закриється через {{countdown}} секунди;Це вікно закриється через {{countdown}} секунд
 ## LOCALIZATION_NOTE (feedback_rejoin_button): Displayed on the feedback form after
 ## a signed-in to signed-in user call.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#feedback
-feedback_rejoin_button=Rejoin
+feedback_rejoin_button=Увійти знову
 ## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
 ## an abusive user.
-feedback_report_user_button=Report User
+feedback_report_user_button=Поскаржитись на користувача
