--- a/fr/browser/chrome/browser/devtools/app-manager.properties
+++ b/fr/browser/chrome/browser/devtools/app-manager.properties
@@ -2,6 +2,10 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+index.deprecationNotice=Le gestionnaire d'applications sera prochainement retiré. Vos projets ont été déplacés dans WebIDE.
+index.launchWebIDE=Lancer WebIDE
+index.readMoreAboutWebIDE=En savoir plus
+
 # LOCALIZATION NOTE (device.deviceSize): %1$S is the device's width, %2$S is
 # the device's height, %3$S is the device's pixel density.
 # Example: 800x480 (86 DPI).
