--- a/ja-JP-mac/dom/chrome/plugins.properties
+++ b/ja-JP-mac/dom/chrome/plugins.properties
@@ -21,5 +21,5 @@ mimetype_label			= MIME タイプ
 description_label		= ファイルの種類
 suffixes_label			= 拡張子
 
-openH264_name			= OpenH264 Video Codec は米国 Cisco Systems 社により提供されました。
+openH264_name			= OpenH264 Video Codec (Cisco Systems, Inc. 提供)
 openH264_description		= Web 動画とビデオチャットの再生に使用されます。
