--- a/it/browser/chrome/browser/search.properties
+++ b/it/browser/chrome/browser/search.properties
@@ -3,6 +3,8 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 searchtip = Cerca con %S
+searchPlaceholder = Cerca
+searchHeader = Cerca con %S
 cmd_pasteAndSearch = Incolla e cerca
 cmd_clearHistory = Cancella la cronologia di ricerca
 cmd_clearHistory_accesskey = n
