--- a/sk/browser/chrome/browser/devtools/scratchpad.properties
+++ b/sk/browser/chrome/browser/devtools/scratchpad.properties
@@ -32,8 +32,9 @@ openFile.title=Otvoriť súbor
 # open fails.
 openFile.failed=Nepodarilo sa načítať súbor.
 
-# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
-# open fails.
+# LOCALIZATION NOTE  (importFromFile.convert.failed): This is the message
+# displayed when file conversion from some charset to Unicode fails.
+# %1 is the name of the charset from which the conversion failed.
 importFromFile.convert.failed=Nepodarilo sa skonvertovať súbor z %1$S do Unicode.
 
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
