--- a/sk/dom/chrome/security/security.properties
+++ b/sk/dom/chrome/security/security.properties
@@ -19,3 +19,8 @@ LoadingMixedActiveContent=Načítava sa zmiešaný (nezabezpečený) aktívny ob
 LoadingMixedDisplayContent=Načítava sa zmiešaný (nezabezpečený) obsah na zobrazenie na zabezpečenej stránke "%1$S"
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=iframe, ktorý má pre svoj atribút sandbox nastavené allow-scripts a allow-same-origin, môže odstrániť svoj sandboxing.
+
+# LOCALIZATION NOTE: Do not translate "SSL 3.0".
+WeakProtocolVersionWarning=Táto stránka používa na šifrovanie protokol SSL 3.0, ktorý je zastaraný a nie je bezpečný.
+# LOCALIZATION NOTE: Do not translate "RC4".
+WeakCipherSuiteWarningTáto stránka používa na šifrovanie šifru RC4, ktorá je zastaraná a nie je bezpečná.
