--- a/sk/browser/chrome/browser/accounts.properties
+++ b/sk/browser/chrome/browser/accounts.properties
@@ -20,3 +20,14 @@ resendVerificationEmail.accessKey = Z
 
 forgetMigration.label = Zabudnúť
 forgetMigration.accessKey = b
+
+# These strings are used in a dialog we display after the user requests we resend
+# a verification email.
+verificationSentTitle = Overenie odoslané
+# LOCALIZATION NOTE (verificationSentHeading) - %S = Email address of user's Firefox Account
+verificationSentHeading = Overovací odkaz bol odoslaný na adresu %S
+verificationSentDescription = Skontrolujte si svoju e-mailovú schránku a kliknite na overovací odkaz, aby ste mohli začať synchronizáciu.
+
+verificationNotSentTitle = Overovací odkaz nebolo možné odoslať
+verificationNotSentHeading = V tomto momente nie je možné odoslať overovací odkaz
+verificationNotSentDescription = Skúste to znova neskôr.
