--- a/sk/dom/chrome/security/security.properties
+++ b/sk/dom/chrome/security/security.properties
@@ -23,4 +23,4 @@ BothAllowScriptsAndSameOriginPresent=iframe, ktorý má pre svoj atribút sandbo
 # LOCALIZATION NOTE: Do not translate "SSL 3.0".
 WeakProtocolVersionWarning=Táto stránka používa na šifrovanie protokol SSL 3.0, ktorý je zastaraný a nie je bezpečný.
 # LOCALIZATION NOTE: Do not translate "RC4".
-WeakCipherSuiteWarningTáto stránka používa na šifrovanie šifru RC4, ktorá je zastaraná a nie je bezpečná.
+WeakCipherSuiteWarning=Táto stránka používa na šifrovanie šifru RC4, ktorá je zastaraná a nie je bezpečná.
