--- a/pl/browser/chrome/browser/devtools/netmonitor.properties
+++ b/pl/browser/chrome/browser/devtools/netmonitor.properties
@@ -109,11 +109,8 @@ networkMenu.empty=Brak żądań
 # information about all requests. Parameters: #1 is the number of requests,
 # #2 is the size, #3 is the number of seconds.
 networkMenu.summary=Jedno żądanie, #2 KB, #3 s;#1 żądania, #2 KB, #3 s;#1 żądań, #2 KB, #3 s
-
-
-# LOCALIZATION NOTE (networkMenu.sizeKB): This is the label displayed
-# in the network menu specifying the size of a request (in kilobytes).
 networkMenu.sizeKB=%S KB
+networkMenu.sizeUnavailable=—
 
 # LOCALIZATION NOTE (networkMenu.totalMS): This is the label displayed
 # in the network menu specifying the time for a request to finish (in milliseconds).
