--- a/fr/dom/chrome/security/security.properties
+++ b/fr/dom/chrome/security/security.properties
@@ -22,3 +22,8 @@ LoadingMixedActiveContent=Chargement de contenu mixte actif (non sécurisé) sur
 LoadingMixedDisplayContent=Chargement de contenu mixte non actif (non sécurisé) sur une page sécurisée « %1$S »
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=Un iframe possédant à la fois allow-scripts et allow-same-origin pour son attribut sandbox peut se retirer du mode bac à sable (sandboxing).
+
+# LOCALIZATION NOTE: Do not translate "SSL 3.0".
+WeakProtocolVersionWarning=Ce site utilise le protocole SSL 3.0 pour le chiffrement. Ce protocole est obsolète et n'est pas sécurisé.
+# LOCALIZATION NOTE: Do not translate "RC4".
+WeakCipherSuiteWarning=Ce site utilise l'algorithme RC4 pour le chiffrement. Cet algorithme est obsolète et n'est pas sécurisé.
