--- a/sl/security/manager/chrome/pipnss/nsserrors.properties
+++ b/sl/security/manager/chrome/pipnss/nsserrors.properties
@@ -314,3 +314,4 @@ SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=Sporočilo je bil podpisano s pomoč
 MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=Strežnik uporablja opredeljevanje ključev (HPKP), vendar ni bilo mogoče sestaviti zaupanja vredne verige digitalnih potrdil, ki bi ustrezala. Zlorab opredeljevanja ključev ni mogoče zavrniti.
 MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=Strežnik uporablja digitalno potrdilo z razširitvijo osnovnih omejitev, kar ga predstavlja kot overitelja. V primeru pravilno izdanega digitalnega potrdila se to ne bi smelo zgoditi.
 MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=Strežnik je predstavil digitalno potrdilo z velikostjo ključa, ki je premajhna za vzpostavitev varne povezave.
+MOZILLA_PKIX_ERROR_V1_CERT_USED_AS_CA=Potrdilo X.509 različice 1, ki ni sidro zaupanja, je bilo uporabljeno za izdajo potrdila strežnika. Potrdila X.509 različice 1 so zastarela in niso primerna za podpisovanje drugih potrdil.
