--- a/sl/security/manager/chrome/pippki/pippki.properties
+++ b/sl/security/manager/chrome/pippki/pippki.properties
@@ -72,19 +72,15 @@ pageInfo_ViewCertificate=Pregledate lahko varnostno digitalno potrdilo, ki preve
 pageInfo_NoEncryption=Povezava ni šifrirana
 pageInfo_Privacy_None1=Spletna stran %S ne podpira šifriranja za stran, ki jo nalagate.
 pageInfo_Privacy_None2=Podatke, poslane prek interneta brez šifriranja, lahko vidijo drugi med prenosom.
-pageInfo_Privacy_None3=Stran, ki jo gledate, ni šifrirana.
-# LOCALIZATION NOTE (pageInfo_StrongEncryptionWithBits): %1$S is the name of the encryption standard,
+pageInfo_Privacy_None3=Ta stran ni šifrirana.
+# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
-pageInfo_StrongEncryptionWithBits=Šifrirana povezava: visokostopenjsko šifriranje (%1$S, %2$S-bitni ključi)
-pageInfo_Privacy_Strong1=Stran, ki jo gledate, je bila šifrirana, preden je bila posredovana prek interneta.
-pageInfo_Privacy_Strong2=Šifriranje oziroma enkripcija zelo otežkoči neavtoriziranim ljudem vpogled v med računalniki potujoče podatke. Zato je zelo neverjetno, da je bila ta stran prebrana, ko je potovala preko mreže.
-# LOCALIZATION NOTE (pageInfo_WeakEncryptionWithBits): %1$S is the name of the encryption standard,
-# %2$S is the key size of the cipher.
-pageInfo_WeakEncryptionWithBits=Šifrirana povezava: nizkostopenjsko šifriranje (%1$S, %2$S-bitni ključi)
-pageInfo_Privacy_Weak1=Spletna stran %S uporablja nizkostopenjsko šifriranje za stran, ki jo nalagate.
-pageInfo_Privacy_Weak2=Nizkostopenjsko šifriranje lahko neavtoriziranim ljudem omogoči, da vidijo te podatke.
+# %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_EncryptionWithBitsAndProtocol=Šifrirana povezava (%1$S, %2$S-bitni ključi, %3$S)
+pageInfo_Privacy_Encrypted1=Ta stran je bila šifrirana pred prenašanjem preko interneta.
+pageInfo_Privacy_Encrypted2=Šifriranje nepooblaščenim osebam oteži ogled podatkov, ki se prenašajo med računalniki. Zato je malo verjetno, da je kdo prebral to stran, medtem ko je potovala po omrežju.
 pageInfo_MixedContent=Povezava delno šifrirana
-pageInfo_Privacy_Mixed1=Deli strani, ki jo gledate, niso bili šifrirani pred prenosom.
+pageInfo_Privacy_Broken1=Deli strani niso bili šifrirani ali šifriranje ni dovolj močno pred prenašanjem preko interneta.
 
 #Cert Viewer
 certDetails=Oglednik digitalnega potrdila:
@@ -124,7 +120,6 @@ disable_fips=Onemogoči FIPS
 fips_nonempty_password_required=Način FIPS zahteva, da imate nastavljeno glavno geslo za vsako varnostno napravo. Prosim, nastavite geslo, preden omogočite način FIPS.
 unable_to_toggle_fips=Sprememba načina FIPS za varnostno napravo ni mogoče. Priporočamo vam, da zaključite in ponovno začenete program.
 
-# CRL next update.
 resetPasswordConfirmationTitle=Ponastavitev glavnega gesla
 resetPasswordConfirmationMessage=Vaše geslo je bilo ponastavljeno.
 
@@ -152,17 +147,17 @@ writeFileUnknownError=Neznana napaka
 addExceptionBrandedWarning2=Prepisali boste način, kako %S prepoznava to stran.
 addExceptionInvalidHeader=Ta stran se poskuša predstaviti z neveljavnimi podatki.
 addExceptionDomainMismatchShort=Napačna stran
-addExceptionDomainMismatchLong=Digitalno potrdilo pripada drugi strani, kar lahko nakazuje na krajo identitete.
+addExceptionDomainMismatchLong2=Potrdilo pripada drugi strani, kar lahko pomeni, da nekdo poskuša oponašati to stran.
 addExceptionExpiredShort=Zastareli podatki
-addExceptionExpiredLong=Digitalno potrdilo trenutno ni veljavno. Ni mogoče preveriti, ali je bila identiteta prijavljena kot ukradena ali izgubljena.
+addExceptionExpiredLong2=Potrdilo trenutno ni veljavno. Morda je bilo ukradeno ali izgubljeno, zato ga lahko kdo uporablja za oponašanje strani.
 addExceptionUnverifiedOrBadSignatureShort=Neznana identiteta
-addExceptionUnverifiedOrBadSignatureLong=Digitalno potrdilo ni vredno zaupanja, ker ga ni overila uradna oseba z varnostnim podpisom.
+addExceptionUnverifiedOrBadSignatureLong2=Digitalno potrdilo ni vredno zaupanja, ker ga ni overila uradna oseba z uporabo varnostnega podpisa.
 addExceptionValidShort=Veljavno digitalno potrdilo
 addExceptionValidLong=Stran ponuja veljavno in overjeno predstavitev. Izjeme ni potrebno dodajati.
 addExceptionCheckingShort=Preverjanje podatkov
-addExceptionCheckingLong=Poskus identifikacije strani …
+addExceptionCheckingLong2=Poskus prepoznavanja strani …
 addExceptionNoCertShort=Podatki niso na voljo
-addExceptionNoCertLong=Za podano stran ni mogoče pridobiti stanja identifikacije.
+addExceptionNoCertLong2=Ni mogoče pridobiti stanja identifikacije te strani.
 addExceptionConnectionFailed=Povezava ni uspela
 
 #Certificate Exists in database
