--- a/uk/browser/chrome/browser/browser.properties
+++ b/uk/browser/chrome/browser/browser.properties
@@ -103,13 +103,6 @@ popupShowPopupPrefix=Показати '%S'
 badContentBlocked.blocked.message=%S is blocking content on this page.
 badContentBlocked.notblocked.message=%S is not blocking any content on this page.
 
-# missing plugin installer
-installPlugin.message = Чи бажаєте ви встановити плагін, який необхідний для відображення медіа на цій сторінці?
-installPlugin.button.label=Встановити %S
-installPlugin.button.accesskey=В
-installPlugin.ignoreButton.label=Більше не питати
-installPlugin.ignoreButton.accesskey=Б
-
 crashedpluginsMessage.title=Плагін %S упав.
 crashedpluginsMessage.reloadButton.label=Перезавантажити сторінку
 crashedpluginsMessage.reloadButton.accesskey=П
@@ -562,13 +555,18 @@ getUserMedia.stopSharing.accesskey = З
 
 getUserMedia.sharingMenu.label = Tabs sharing devices
 getUserMedia.sharingMenu.accesskey = d
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -582,6 +580,9 @@ getUserMedia.sharingMenuCameraMicrophone = %S (camera and microphone)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (camera, microphone and application)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (camera, microphone and screen)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (camera, microphone and window)
+getUserMedia.sharingMenuCameraApplication = %S (camera and application)
+getUserMedia.sharingMenuCameraScreen = %S (camera and screen)
+getUserMedia.sharingMenuCameraWindow = %S (camera and window)
 getUserMedia.sharingMenuMicrophoneApplication = %S (microphone and application)
 getUserMedia.sharingMenuMicrophoneScreen = %S (microphone and screen)
 getUserMedia.sharingMenuMicrophoneWindow = %S (microphone and window)
