--- a/sl/browser/chrome/browser/browser.properties
+++ b/sl/browser/chrome/browser/browser.properties
@@ -294,12 +294,12 @@ identity.identified.verifier=Overil: %S
 identity.identified.verified_by_you=Za to stran ste dodali varnostno izjemo
 identity.identified.state_and_country=%S, %S
 
-identity.encrypted2=Povezava na to spletno stran je varna.
-identity.mixed_display_loaded=Povezava na to spletno stran ni povsem varna, ker vsebuje nešifrirane elemente (npr. slike).
-identity.mixed_active_loaded2=Ta spletna stran vsebuje interaktivno vsebino, ki ni šifrirana (npr. skripti). Tretje osebe lahko vidijo vaše podatke ali spreminjajo obnašanje strani.
-identity.unencrypted=Vaša povezava na to spletno stran ni šifrirana.
+identity.encrypted2=Povezava na spletno stran je varna.
+identity.mixed_display_loaded=Povezava na spletno stran ni povsem varna, ker vsebuje nešifrirane elemente (npr. slike).
+identity.mixed_active_loaded2=Spletna stran vsebuje interaktivno vsebino, ki ni šifrirana (npr. skripti). Tretje osebe lahko vidijo vaše podatke ali spreminjajo obnašanje strani.
+identity.unencrypted=Vaša povezava na spletno stran ni šifrirana.
 
-identity.unknown.tooltip=Ta spletna stran ne vsebuje podatkov o identiteti.
+identity.unknown.tooltip=Spletna stran ne vsebuje podatkov o identiteti.
 
 # LOCALIZATION NOTE (identity.chrome): %S is replaced with the brandShortName.
 identity.chrome=To je varna stran %Sa.
