--- a/sk/browser/chrome/browser/preferences/preferences.properties
+++ b/sk/browser/chrome/browser/preferences/preferences.properties
@@ -95,6 +95,10 @@ cookiesFiltered=Tieto cookies vyhovujú vášmu hľadaniu:
 # LOCALIZATION NOTE (removeSelectedCookies):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# If you need to display the number of selected elements in your language,
+# you can use #1 in your localization as a placeholder for the number.
+# For example this is the English string with numbers:
+# removeSelectedCookied=Remove #1 Selected;Remove #1 Selected
 removeSelectedCookies=Odstrániť zvolené;Odstrániť zvolené;Odstrániť zvolené
 
 #### Offline apps
