--- a/sk/browser/chrome/browser/accounts.properties
+++ b/sk/browser/chrome/browser/accounts.properties
@@ -10,6 +10,12 @@ needUserLong = Službu Sync sme prerobili tak, aby bola jednoducho použiteľná
 upgradeToFxA.label = Aktualizovať
 upgradeToFxA.accessKey = A
 
+# LOCALIZATION NOTE (signInAfterUpgradeOnOtherDevice.description)
+# %S = Email address of user's Firefox Account
+signInAfterUpgradeOnOtherDevice.description = Služba Sync bola na druhom zariadení aktualizovaná používateľom %S. Pokračovať v synchronizácii?
+signInAfterUpgradeOnOtherDevice.label = Prihlásiť sa
+signInAfterUpgradeOnOtherDevice.accessKey = P
+
 # LOCALIZATION NOTE (needVerifiedUserShort, needVerifiedUserLong)
 # %S = Email address of user's Firefox Account
 needVerifiedUserShort = Adresa %S nie je overená
@@ -20,6 +26,13 @@ resendVerificationEmail.accessKey = Z
 
 forgetMigration.label = Zabudnúť
 forgetMigration.accessKey = b
+
+unlinkMigration.label = Zrušiť prepojenie so službou Sync
+unlinkMigration.accessKey = r
+
+unlinkVerificationTitle = Zrušiť prepojenie so starou verziou služby Sync?
+unlinkVerificationDescription = Ak už viac nechcete dostávať upozornenia na potrebu aktualizovať službu Sync, môžete zrušiť prepojenie so svojím starým účtom služby Sync.
+unlinkVerificationConfirm = Zrušiť prepojenie
 
 # These strings are used in a dialog we display after the user requests we resend
 # a verification email.
