--- a/fa/browser/chrome/browser/browser.properties
+++ b/fa/browser/chrome/browser/browser.properties
@@ -387,6 +387,7 @@ tabview.title=%S - گروه‌بندی زبانه‌ها
 tabview.moveToUnnamedGroup.label=#1 و 1 بیشتر;#1 و #2 بیشتر
 
 # LOCALIZATION NOTE (tabviewButton.tooltip): %S is the keyboard shortcut for tab groups
+tabviewButton.tooltip=زبانه‌های موجود را گروه‌بندی کنید(%S)
 
 extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.name=پیش‌فرض
 extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.description=تم پیش‌فرض.
